Optimizing imports and cleaning up inconsistent use of list creation